fix uppercase/lowercase in bibtex citation title

--- a/mgx.bib
+++ b/mgx.bib
@@ -1,6 +1,6 @@
 @article{Jaenicke2018,
   author={Jaenicke, Sebastian and Albaum, Stefan P. and Blumenkamp, Patrick and Linke, Burkhard and Stoye, Jens and Goesmann, Alexander},
-  title={Flexible metagenome analysis using the MGX framework},
+  title={{Flexible metagenome analysis using the MGX framework}},
   journal="Microbiome",
   year="2018",
   month="Apr",
